# glowing-happiness

./: README.md  cli.py  main.py  pyproject.toml
templates/: base.html  index.html
thumbnail/: __init__.py  cli.py  main.py  thumbnail_generator.py
